<resources>
    <string name="app_name">App RV</string>
    <string name="title_activity_hijo">Hijos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_hijo_detalle">HijoDetalleActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="field_error">Ingresa un valor</string>
    <string name="action_delete">Eliminar</string>


    <!-- signinActivity-->
    <string name="servidor">http://10.13.13.214:8080</string>
    <string name="sign_out">SIGUIENTE</string>
    <string name="revocar">DESCONECTAR</string>


    <string name="title_text">Libreta Vacunación</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Conectado con: %s</string>
    <string name="email">Correo: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in.</string>
    <string name="signed_out">Desconectado</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">

    </string>
    <string name="loading">Loading…</string>


    <!-- Google Play Services error for Toast -->


    <!-- Button labels -->

    <string name="disconnect">Desconectar</string>


    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>
    <string name="hello_world">Hello world!</string>

    <string name="texto">Ejemplo de una tabla en Android</string>
</resources>
